--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
 .App {
   text-align: center;
+  margin: 50px auto;
+  width: 809px;
+  background-color: #fff;
+  box-shadow: 0px 0px 30px -16px rgba(0, 0, 0, 0.5);
+  padding: 20px 30px;
+  color: #363b41;
+}
+
+.header {
+  border-bottom: 2px solid rgba(0, 0, 0, 0.08);
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
