--- a/src/components/InputNumbers/style.css
+++ b/src/components/InputNumbers/style.css
@@ -17,4 +17,17 @@
 
 .inputnumber-button {
   margin-top: 15px;
+  width: 120px;
+  height: 40px;
+  border-radius: 8px;
+  box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.75);
+  color: #fff;
+  background-color: #636363;
+  font-size: 1.2rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+}
+
+.inputnumber-button:hover {
+  background-color: #454545;
 }
