--- a/src/components/Timer/style.css
+++ b/src/components/Timer/style.css
@@ -1,5 +1,5 @@
 .timer-container {
-  margin: 40px 0 40px;
+  margin: 30px 0 30px;
   width: 70%;
   height: 150px;
   background-image: linear-gradient(-222deg, #ff8494, #ffa9b7);
@@ -18,5 +18,12 @@
 .timer-clock {
   margin-top: 15px;
   font-family: "Exo 2", sans-serif;
+  font-size: 1.2rem;
+}
+
+.timer-loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 1.2rem;
 }
