--- a/src/components/InputNumbers/style.css
+++ b/src/components/InputNumbers/style.css
@@ -6,6 +6,7 @@
   align-items: center;
   box-shadow: 0px 0px 40px -18px rgba(0, 0, 0, 0.75);
   margin-bottom: 30px;
+  background-color: lightgray;
 }
 
 .inputnumber-textarea {
@@ -13,7 +14,7 @@
   height: 100px;
   overflow: auto;
   font-size: 1rem;
-  border-color: #454545;
+  border-color: lightgray;
 }
 
 .inputnumber-button {
