--- a/src/components/SortResult/style.css
+++ b/src/components/SortResult/style.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   box-shadow: 0px 0px 40px -18px rgba(0, 0, 0, 0.75);
+  background-color: #a39d9e;
 }
 
 .result-container {
@@ -19,6 +20,7 @@
 .result-content {
   width: 90%;
   border: 1px solid gray;
+  background-color: #fff;
   height: 100px;
   overflow: auto;
 }
